data/derived/comb/progs/unify/prog2112.ml.out
Characters 13-14:
  let _ = pipe 3;;
               ^
Error: This expression has type int but an expression was expected of type
         ('a list -> 'a list) list
